# aslr_to

./: .gitignore  CMakeLists.txt  README.md  setup.cfg
example_for_manuscript/: 2dof_kkt_error.py  7dof.py  7dof_rigid.py  7dof_sea.py  7dof_sea_numdiff.py  7dof_sea_stats.py  7dof_vsa.py  7dof_vsa_numdiff.py  acrobot_sea.py  acrobot_vsa.py  controls.mat  controls_vsa.mat  fb.mat  four_dof.py  four_dof_sea_numdiff.py  four_dof_vsa.py  numdiff_error.py  numdiff_error_vsa.py  optimised_trajectory.mat  optimised_trajectory_vsa.mat  panda_sea.py  ra_vs_sa.py  stiffness_vsa.mat  table  three_dof.py  three_dof_numdiff.py  three_dof_sea_numdiff_stats.py  three_dof_sea_stats.py  three_dof_vsa.py  three_dof_vsa_numdiff_stats.py  two_dof_numdiff.py  two_dof_qb.py  two_dof_rigid.py  two_dof_sea.py  two_dof_sea_numdiff.py  two_dof_vsa.py  two_dof_vsa_numdiff.py  under_2dof_sea_stats.py  under_2dof_vsa_nn.py  under_2dof_vsa_stats.py  (+5 more)
examples/: arm_manipulation_aslr.py  arm_manipulation_aslr_test.py  arm_vsa.py  com_move_rigid.py  com_move_softleg.py  control_u1_1.mat  controls.mat  controls_vsa.mat  double_pendulum.py  double_pendulum_fwd.py  double_pendulum_rigid.py  fishing_rod.py  jumping_condensed.py  jumping_log_1.5_-1.5  jumping_log_same_groundknots  jumping_rigid.py  jumping_rigid_leg.py  jumping_softleg.py  matlab_matrix.mat  max_jump.py  max_jump_softleg.py  max_jump_test.py  optimised_trajectory.mat  optimised_trajectory_q_1.mat  optimised_trajectory_q_dot_1.mat  optimised_trajectory_vsa.mat  pendulum.py  pendulum_fwd.py  quadruped_com_move.py  quadruped_condensed.py  quadruped_condensed_com_move.py  quadruped_condensed_problem.py  quadruped_problem.py  quadruped_rigid.py  quadruped_vsa_condensed_commove.py  quadruped_vsa_condensed_problem.py  rigid_leg_problem.py  soft_leg_problem.py  stiffness_vsa.mat  test_arm_intro.py  (+13 more)
python/: CMakeLists.txt
python/aslr_to/: __init__.py  actuation_aslr.py  actuation_asr.py  actuation_condensed.py  actuation_fishing.py  actuation_rigidleg.py  actuation_softleg.py  actuation_vsa.py  actuation_vsa_qb.py  contact3d.py  contact3d_asr.py  contact_fwddyn.py  contact_fwddyn_aslr.py  contact_fwddyn_new.py  contact_fwddyn_rigid.py  datacollector_softmodel_multibody.py  floating_actuation.py  floating_actuation_condensed.py  floating_actuation_new.py  floating_soft_model_residual.py  floating_vsa_model_residual.py  free_fwddyn.py  free_fwddyn_aslr.py  free_fwddyn_asr.py  free_fwddyn_fishing_2.py  free_fwddyn_vsa.py  free_fwddyn_vsa_qb.py  impulse_fwddyn_aslr.py  integrated_action.py  numdiff_dam_asr.py  residual_acrobot.py  residual_floating_soft_model.py  residual_floating_vsa_model.py  residual_frame_placement.py  residual_frame_velocity.py  residual_tau_couple.py  soft_residual_model.py  softmodel_data.py  solver.py  solvers.py  (+7 more)
unittest/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  (+32 more)
(+104 files in other folders)
